feat(wip): agent creation
